[package]
name = "k8s-pki"
version = "0.0.0-development"
edition = "2021"

[dependencies]
clap = { version = "4.3.10", features = ["derive", "env"] }
env_logger = "0.10.0"
k8s-openapi = { version = "0.15.0", features = ["v1_22"] }
kube = "0.74.0"
log = "0.4.19"
openssl = "0.10.55"
openssl-sys = "0.9.90"
prost = "0.10.4"
prost-types = "0.10.1"
time = "0.3.22"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "fs", "signal"] }
tonic = { version = "0.7.2", features = ["tls", "tls-roots", "tls-roots-common"] }
tonic-types = "0.5.0"
tonic-web = "0.3.0"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tonic-build = "0.7.2"
