[package]
name = "k8s-pki"
version = "0.0.0-development"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive", "env"] }
env_logger = "0.11.2"
k8s-openapi = { version = "0.15.0", features = ["v1_22"] }
kube = "0.74.0"
log = "0.4.21"
openssl = "0.10.64"
openssl-sys = "0.9.101"
prost = "0.10.4"
prost-types = "0.10.1"
time = "0.3.34"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "fs", "signal"] }
tonic = { version = "0.7.2", features = ["tls", "tls-roots", "tls-roots-common"] }
tonic-types = "0.5.0"
tonic-web = "0.3.0"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tonic-build = "0.7.2"
